# Spanwork

./: .gitexclude  .gitignore  AGENTS.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.cursor/: mcp.json
apps/spanwork/src-tauri/: Cargo.toml  Info.ios.plist  tauri.conf.json  tauri.dev-peer.conf.json  tauri.ios.conf.json.example
apps/spanwork/src-tauri/capabilities/: default.json
apps/spanwork/src-tauri/icons/: icon.icns
apps/spanwork/src-tauri/migrations/: 001_initial.sql  002_task_is_milestone.sql  003_fix_subtask_milestone_flag.sql  007_habit_fogg_fields.sql  008_behavior_design_enabled.sql  009_habit_schedule_multi.sql  010_task_behavior_design.sql  011_sync_flm.sql  012_sync_triggers.sql  014_project_type_aim_cleanup.sql  README.md
apps/spanwork/src-tauri/migrations/schema/: current.sql
apps/spanwork/src-tauri/migrations/versions/: 004_project_categories.sql  005_active_timer_pause.sql  006_habit_rules_multi.sql  013_project_type_aim.sql
apps/spanwork/src-tauri/scripts/: sync-icons.sh
apps/spanwork/src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
apps/spanwork/src-tauri/src/commands/: calendar.rs  device.rs  habit.rs  log.rs  milestone.rs  mod.rs  project.rs  project_category.rs  sync.rs  task.rs  time_entry.rs  timer.rs  today.rs
apps/spanwork/src-tauri/src/db/: migrate.rs  mod.rs  pool.rs  sync_log.rs
apps/spanwork/src-tauri/src/domain/: habit_fogg.rs  habit_schedule.rs  habit_time.rs  mod.rs  project_lifecycle.rs  sync_ids.rs  task_time.rs  task_tree.rs  time_display.rs
apps/spanwork/src-tauri/src/dto/: mod.rs
(+273 files in other folders)
