[package]
name = "spanwork"
version = "0.1.0"
description = "Spanwork personal project management"
authors = ["Spanwork"]
edition = "2024"
rust-version = "1.88"

[lib]
name = "spanwork_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v7"] }
thiserror = "2"
hostname = "0.4"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
